# zerum-goals

./: .gitignore  README.md  app.py  jira_utils.py  pyproject.toml
