[tool.poetry]
name = "zerum-okr"
version = "0.1.0"
description = "A project for data visualization of Zerum IT OKRs information."
authors = ["Wagner Santos <wagnerjs.unb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
watchdog = "^4.0.0"
jira = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
